--- a/simple-todos.html
+++ b/simple-todos.html
@@ -7,6 +7,11 @@
 		<header>
 			<h1>Todo List</h1>
 
+			<label class="hide-completed">
+				<input type="checkbox" checked="{{hideCompleted}}" />
+				Hide Completed Tasks
+			</label>
+
 			<form class="new-task">
 				<input type="text" name="text" placeholder="Type to add new tasks" />
 			</form>
@@ -27,6 +32,4 @@
 
 		<span class="text">{{text}}</span>
 	</li>
-
-
 </template>
