--- a/simple-todos.html
+++ b/simple-todos.html
@@ -5,16 +5,22 @@
 <body>
 	<div class="container">
 		<header>
-			<h1>Todo List</h1>
+			<h1>Todo List ({{incompleteCount}})</h1>
 
 			<label class="hide-completed">
 				<input type="checkbox" checked="{{hideCompleted}}" />
 				Hide Completed Tasks
 			</label>
 
-			<form class="new-task">
-				<input type="text" name="text" placeholder="Type to add new tasks" />
-			</form>
+            {{> loginButtons}}
+
+            {{#if currentUser}}
+                <form class="new-task">
+                    <input typpe="text" name="text" placeholder="Type to add new tasks" />
+                </form>
+            {{/if}}
+
+
 		</header>
 
 		<ul>
@@ -30,6 +36,6 @@
 		<button class="delete">&times;</button>
 		<input type="checkbox" checked="{{checked}}" class="toggle-checked" />
 
-		<span class="text">{{text}}</span>
+		<span class="text"><strong>{{username}}</strong> - {{text}}</span>
 	</li>
 </template>
